[tool.poetry]
name = "org-roam-similarity"
version = "0.1.0"
description = ""
authors = ["Charl P. Botha <cpbotha@vxlabs.com>"]
readme = "README.md"
# need the following because name and package differ wrt - and _
# https://python-poetry.org/docs/basic-usage/#project-setup
packages = [{include = "org_roam_similarity"}]


[tool.poetry.dependencies]
# <3.13 to get numpy installed :(
python = ">=3.10,<3.13"
transformers = "^4.34.1"
torch = "^2.1.0"
pandas = "^2.1.2"
pyarrow = "^13.0.0"
umap-learn = "^0.5.4"
seaborn = "^0.13.0"
bokeh = "^3.3.0"
holoviews = "^1.18.0"
datashader = "^0.16.0"
jupyterlab = "^4.0.7"
ipywidgets = "^8.1.1"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
click = "^8.1.7"
accelerate = "^0.24.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
nbdime = "^3.2.1"

[tool.poetry.scripts]
serve = "org_roam_similarity.serve:run"
embed = "org_roam_similarity.embed:cli"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
